--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-proxy": "^1.17.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "newrelic": "^5.6.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "request": "^2.88.0",
